# Morphic

./: .gitignore  .npmrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: CLAUDE.md
.claude/skills/: ui-ux-best-practices.md
.github/: copilot-instructions.md
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/pdf/translate/: route.ts
apps/web/src/app/compare/json/: page.tsx
apps/web/src/app/components/: Footer.tsx  GoogleDriveImport.tsx  GooglePhotosImport.tsx  ImageActionStudio.tsx  JsonDiffStudio.tsx  MainNav.tsx  PdfTranslateStudio.tsx  ThemeToggle.tsx  VideoActionStudio.tsx  pdf-translate.worker.ts
apps/web/src/app/compress/images/: page.tsx
apps/web/src/app/compress/videos/: page.tsx
apps/web/src/app/convert/images/: page.tsx
apps/web/src/app/convert/videos/: page.tsx
apps/web/src/app/file-manipulation/translate-pdf/: page.tsx
apps/web/src/app/import/: page.tsx
apps/web/src/app/import/google-drive/: page.tsx
apps/web/src/app/import/google-photos/: page.tsx
apps/web/src/app/upscale/images/: page.tsx
apps/web/src/app/utils/: diffChecker.ts
apps/web/src/lib/: pdf-translation.ts
tools/: ensure_pdf_translate_env.sh
tools/pdf-translator/: bootstrap_models.py  pyproject.toml  translate.py
