[package]
name = "morphic-desktop"
version = "0.0.1"
description = "Morphic — Convert, compress, upscale EVERYTHING locally"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "morphic_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
morphic-core-native = { path = "../../../packages/core-native" }
